début du projet

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -49,11 +49,30 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 1 : Donner le code qui transforme une image RGB en une image YCbCr. Vous pourrez produire\n",
+    "une matrice pour chaque composante, pour pouvoir plus facilement les manipuler ind ́ependamment. Vous\n",
+    "pouvez stocker les donn ́ees YCbCr comme des entiers ou des flottants, mais vous expliquerez votre choix."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def RGB_en_YCbCR(image):\n",
+    "    image_finale = image\n",
+    "    for i in range(image.shape[0]):\n",
+    "        for j in range(image.shape[1]):\n",
+    "            Y =\n",
+    "            Cb = \n",
+    "            Cr = \n",
+    "            "
+   ]
   },
   {
    "attachments": {},
