--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "def RGB_en_YCbCR(image):\n",
-    "    image_finale = image.copy()\n",
+    "    image_finale = np.array(image, dtype='float64')\n",
     "    for i in range(image.shape[0]):\n",
     "        for j in range(image.shape[1]):\n",
     "            R = image[i, j, 0]\n",
@@ -74,7 +74,7 @@
     "            image_finale[i, j, 0] = 0.299 * R + 0.587 * G + 0.114 * B\n",
     "            image_finale[i, j, 1] = -0.1687 * R - 0.3313 * G + 0.5 * B + 128\n",
     "            image_finale[i, j, 2] = 0.5 * R - 0.4187 * G - 0.0813 * B + 128\n",
-    "    return np.uint8(image_finale)\n"
+    "    return image_finale\n"
    ]
   },
   {
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
     "def YCbCR_en_RGB(image):\n",
-    "    image_finale = image.copy()\n",
+    "    image_finale = np.array(image, dtype='uint8')\n",
     "    for i in range(image.shape[0]):\n",
     "        for j in range(image.shape[1]):\n",
     "            Y = image[i, j, 0]\n",
@@ -106,28 +106,6 @@
     "            image_finale[i, j, 1] = Y - 0.34414 * (Cb - 128) - 0.71414 * (Cr - 128)\n",
     "            image_finale[i, j, 2] = Y + 1.772 * (Cb - 128)\n",
     "    return np.uint8(np.clip(image_finale, 0, 255))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rgb2ycbcr(im):\n",
-    "    xform = np.array([[.299, .587, .114], [-.1687, -.3313, .5], [.5, -.4187, -.0813]])\n",
-    "    ycbcr = im.dot(xform.T)\n",
-    "    ycbcr[:,:,[1,2]] += 128\n",
-    "    return np.uint8(ycbcr)\n",
-    "\n",
-    "def ycbcr2rgb(im):\n",
-    "    xform = np.array([[1, 0, 1.402], [1, -0.34414, -.71414], [1, 1.772, 0]])\n",
-    "    rgb = im.astype(np.float64)\n",
-    "    rgb[:,:,[1,2]] -= 128\n",
-    "    rgb = rgb.dot(xform.T)\n",
-    "    np.putmask(rgb, rgb > 255, 255)\n",
-    "    np.putmask(rgb, rgb < 0, 0)\n",
-    "    return np.uint8(rgb)"
    ]
   },
   {
@@ -141,12 +119,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def padding(image):\n",
-    "    return image"
+    "    padded_image = np.array(image, dtype='uint8')\n",
+    "    ligne = padded_image.shape[0]\n",
+    "    colonne = padded_image.shape[1]\n",
+    "    canaux = padded_image.shape[2]\n",
+    "    if ligne % 8 != 0:\n",
+    "        padded_image = np.concatenate((padded_image, np.zeros((ligne%8, colonne, canaux), dtype=np.uint8)), axis=0)\n",
+    "    if colonne % 8 != 0:\n",
+    "        padded_image = np.concatenate((padded_image, np.zeros((ligne, colonne%8, canaux), dtype=np.uint8)), axis=1)\n",
+    "    return padded_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unpadding(image):\n",
+    "    unpadded_image = np.array(image, dtype='uint8')\n",
+    "    ligne = unpadded_image.shape[0]\n",
+    "    colonne = unpadded_image.shape[1]\n",
+    "    # Supprimer les colonnes situées tout à droite\n",
+    "    count_cols = 0\n",
+    "    while count_cols < 7 and np.all(unpadded_image[:, -1, :] == 0) and colonne > 0:\n",
+    "        unpadded_image = unpadded_image[:, :-1, :]\n",
+    "        colonne -= 1\n",
+    "        count_cols += 1\n",
+    "    # Supprimer les lignes situées tout en bas\n",
+    "    count_rows = 0\n",
+    "    while count_rows < 7 and np.all(unpadded_image[-1, :, :] == 0) and ligne > 0:\n",
+    "        unpadded_image = unpadded_image[:-1, :, :]\n",
+    "        ligne -= 1\n",
+    "        count_rows += 1\n",
+    "    return unpadded_image"
    ]
   },
   {
@@ -197,29 +209,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_117960\\1364822764.py\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"test.png\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtestYCbCr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mYCbCR_en_RGB\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRGB_en_YCbCR\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'RGB'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtestYCbCr\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'RGB'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpsnr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtestYCbCr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_117960\\1223891978.py\u001b[0m in \u001b[0;36mYCbCR_en_RGB\u001b[1;34m(image)\u001b[0m\n\u001b[0;32m      9\u001b[0m             \u001b[0mimage_finale\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m0.34414\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mCb\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m128\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m0.71414\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mCr\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m128\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mimage_finale\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1.772\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mCb\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m128\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m             \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mputmask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_finale\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_finale\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m255\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m255\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m             \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mputmask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_finale\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_finale\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muint8\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_finale\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\numpy\\core\\overrides.py\u001b[0m in \u001b[0;36mputmask\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_120612\\320547313.py\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpadding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'RGB'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0munpadding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpadding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'RGB'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpsnr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0munpadding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpadding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_120612\\1825327511.py\u001b[0m in \u001b[0;36mpsnr\u001b[1;34m(original, compressed)\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mmse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moriginal\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mcompressed\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m**\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mmax_pixel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m255.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mpsnr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m20\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mlog10\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_pixel\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpsnr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
    ],
    "source": [
     "test = load(\"test.png\")\n",
-    "testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
-    "Image.fromarray(test,'RGB').show()\n",
-    "Image.fromarray(testYCbCr,'RGB').show()\n",
-    "print(psnr(test, testYCbCr))\n"
+    "#testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
+    "#Image.fromarray(test,'RGB').show()\n",
+    "#Image.fromarray(testYCbCr,'RGB').show()\n",
+    "\n",
+    "Image.fromarray(padding(test),'RGB').show()\n",
+    "Image.fromarray(unpadding(padding(test)),'RGB').show()\n",
+    "print(psnr(test, unpadding(padding(test))))"
    ]
   }
  ],
