--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +191,29 @@
     "            matrice_se[i][j//2] = new_value\n",
     "\n",
     "    return matrice_se"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 5 : Implémenter la fonction qui multiplie par deux la deuxième dimension d’une matrice. Tester à la suite le sous-échantillonnage et cette fonction, vous devez retrouver une image presque identique à celle de départ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mult_mat(matrice):\n",
+    "    matrice_mult = [[i for i in range(len(matrice[1])*2)] for i in range(len(matrice))]\n",
+    "    for i in range(len(matrice)):\n",
+    "        for j in range(0, len(matrice_mult[1]), 2):\n",
+    "            matrice_mult[i][j] = matrice[i][j//2]\n",
+    "            matrice_mult[i][j+1] = matrice[i][j//2]\n",
+    "    return matrice_mult"
    ]
   },
   {
@@ -241,14 +264,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.5, 4.5], [4.0, 5.0]]\n"
+      "[[1.5, 4.5], [4.0, 5.0]]\n",
+      "[[1.5, 1.5, 4.5, 4.5], [4.0, 4.0, 5.0, 5.0]]\n"
      ]
     }
    ],
@@ -261,8 +285,16 @@
     "#Image.fromarray(padding(test),'RGB').show()\n",
     "#Image.fromarray(unpadding(padding(test), test),'RGB').show()\n",
     "\n",
-    "print(sous_echantillonage([[1,2,3,6],[3,5,10,0]]))"
+    "print(sous_echantillonage([[1,2,3,6],[3,5,10,0]]))\n",
+    "print(mult_mat(sous_echantillonage([[1,2,3,6],[3,5,10,0]])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
