--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +194,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sous_echantillonnage2(matrice):\n",
+    "    matrice = np.array(matrice, dtype='float64')\n",
+    "    new_len_col = len(matrice[0]) // 2\n",
+    "\n",
+    "    # Sous-échantillonner la matrice\n",
+    "    matrice_se = np.zeros((matrice.shape[0], new_len_col))\n",
+    "    for i in range(matrice.shape[0]):\n",
+    "        for j in range(0, matrice.shape[1], 2):\n",
+    "            print(i,j)\n",
+    "            new_value = (matrice[i][j] + matrice[i][j+1])/2\n",
+    "            matrice_se[i][j//2] = new_value\n",
+    "\n",
+    "    return matrice_se"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -203,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +234,22 @@
     "        for j in range(0, len(matrice_mult[1]), 2):\n",
     "            matrice_mult[i][j] = matrice[i][j//2]\n",
     "            matrice_mult[i][j+1] = matrice[i][j//2]\n",
+    "    return matrice_mult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def mult_mat2(matrice):\n",
+    "    matrice_mult = np.zeros((matrice.shape[0], matrice.shape[1] * 2))\n",
+    "    for i in range(matrice.shape[0]):\n",
+    "        for j in range(matrice.shape[1]):\n",
+    "            matrice_mult[i][j] = matrice[i][j]\n",
+    "            matrice_mult[i][j+1] = matrice[i][j]\n",
     "    return matrice_mult"
    ]
   },
@@ -264,15 +301,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.5, 4.5], [4.0, 5.0]]\n",
-      "[[1.5, 1.5, 4.5, 4.5], [4.0, 4.0, 5.0, 5.0]]\n"
+      "0 0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_125260\\1739063584.py\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m#print(mult_mat(sous_echantillonage([[1,2,3,6],[3,5,10,0]])))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msous_echantillonnage2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpadded_image\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'RGB'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_125260\\3084122696.py\u001b[0m in \u001b[0;36msous_echantillonnage2\u001b[1;34m(matrice)\u001b[0m\n\u001b[0;32m      9\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mnew_value\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmatrice\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mmatrice\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m             \u001b[0mmatrice_se\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m//\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmatrice_se\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence."
      ]
     }
    ],
@@ -282,11 +333,15 @@
     "#Image.fromarray(test,'RGB').show()\n",
     "#Image.fromarray(testYCbCr,'RGB').show()\n",
     "\n",
-    "#Image.fromarray(padding(test),'RGB').show()\n",
-    "#Image.fromarray(unpadding(padding(test), test),'RGB').show()\n",
+    "padded_image = padding(test)\n",
     "\n",
-    "print(sous_echantillonage([[1,2,3,6],[3,5,10,0]]))\n",
-    "print(mult_mat(sous_echantillonage([[1,2,3,6],[3,5,10,0]])))"
+    "#Image.fromarray(padded_image,'RGB').show()\n",
+    "#Image.fromarray(unpadding(padded_image, test),'RGB').show()\n",
+    "\n",
+    "#print(sous_echantillonnage2([[1,2,3,6],[3,5,10,0]]))\n",
+    "#print(mult_mat(sous_echantillonage([[1,2,3,6],[3,5,10,0]])))\n",
+    "\n",
+    "Image.fromarray(sous_echantillonnage2(padded_image),'RGB').show()"
    ]
   },
   {
