question 7 (peut etre, jsp si ça marche)

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -295,7 +295,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def applique_trans(liste_bloc):\n",
+    "    for i in range(len(liste_bloc)):\n",
+    "        liste_bloc[i] = dct2(liste_bloc[i])\n",
+    "    return liste_bloc"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 8 : Implémentez le filtrage des coefficients des blocs selon un seuil donné en argument."
+   ]
   },
   {
    "attachments": {},
