Added function to write in a file and to read a file.

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -320,10 +320,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-08T14:44:30.145282Z",
+     "start_time": "2023-05-08T14:44:30.139328Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#ecrire dans un fichier\n",
+    "\n",
+    "def ecrire_fichier(liste_bloc, fichier):\n",
+    "    with open(fichier, 'w') as f:\n",
+    "        for bloc in liste_bloc:\n",
+    "            for ligne in bloc:\n",
+    "                for element in ligne:\n",
+    "                    f.write(str(element) + ' ')\n",
+    "                f.write('\\n')\n",
+    "            f.write('\\n')\n",
+    "\n",
+    "#lire dans un fichier\n",
+    "def lire_fichier(fichier):\n",
+    "    with open(fichier, 'r') as f:\n",
+    "        lignes = f.readlines()\n",
+    "        blocs = []\n",
+    "        bloc = []\n",
+    "        for ligne in lignes:\n",
+    "            if ligne == '\\n':\n",
+    "                blocs.append(bloc)\n",
+    "                bloc = []\n",
+    "            else:\n",
+    "                ligne = ligne.split(' ')\n",
+    "                ligne = [int(element) for element in ligne if element != '']\n",
+    "                bloc.append(ligne)\n",
+    "    return blocs"
+   ]
   },
   {
    "attachments": {},
