--- a/projet.ipynb
+++ b/projet.ipynb
@@ -361,14 +361,9 @@
    "source": [
     "#ecrire dans un fichier\n",
     "\n",
-    "def ecrire_fichier(liste_bloc, fichier):\n",
-    "    with open(fichier, 'w') as f:\n",
-    "        for bloc in liste_bloc:\n",
-    "            for ligne in bloc:\n",
-    "                for element in ligne:\n",
-    "                    f.write(str(element) + ' ')\n",
-    "                f.write('\\n')\n",
-    "            f.write('\\n')\n",
+    "def ecrire_fichier(image, mode):\n",
+    "    f = open(\"fichier.txt\", \"w\")\n",
+    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\")\n",
     "\n",
     "#lire dans un fichier\n",
     "def lire_fichier(fichier):\n",
@@ -385,6 +380,35 @@
     "                ligne = [int(element) for element in ligne if element != '']\n",
     "                bloc.append(ligne)\n",
     "    return blocs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 11 : Vous  ́ecrirez ensuite le contenu des blocs, d’abord ceux de Y, puis ceux de Cb puis ceux de Cr. Chaque bloc est écrit sur une ligne, les valeurs  ́etant des entiers séparés par de espaces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ecrire_bloc(image):\n",
+    "    f = open(\"fichier.txt\", \"w\")\n",
+    "    for i in range(len(image[0])):\n",
+    "        for j in range(len(image[0][0])):\n",
+    "            f.write(image[i][j][0])\n",
+    "    f.write(\"\\n\")\n",
+    "    for i in range(len(image[0])):\n",
+    "        for j in range(len(image[0][0])):\n",
+    "            f.write(image[i][j][1])\n",
+    "    f.write(\"\\n\")\n",
+    "    for i in range(len(image[0])):\n",
+    "        for j in range(len(image[0][0])):\n",
+    "            f.write(image[i][j][2])"
    ]
   },
   {
