--- a/projet.ipynb
+++ b/projet.ipynb
@@ -327,8 +327,8 @@
    "source": [
     "def trois_modes(image, seuil):\n",
     "    mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(image))))\n",
-    "    mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))), seuil)\n",
-    "    mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))), seuil)\n",
+    "    mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(image)))), seuil)\n",
+    "    mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(image))))), seuil)\n",
     "    return mode_0, mode_1, mode_2"
    ]
   },
@@ -363,23 +363,7 @@
     "\n",
     "def ecrire_fichier(image, mode):\n",
     "    f = open(\"fichier.txt\", \"w\")\n",
-    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\")\n",
-    "\n",
-    "#lire dans un fichier\n",
-    "def lire_fichier(fichier):\n",
-    "    with open(fichier, 'r') as f:\n",
-    "        lignes = f.readlines()\n",
-    "        blocs = []\n",
-    "        bloc = []\n",
-    "        for ligne in lignes:\n",
-    "            if ligne == '\\n':\n",
-    "                blocs.append(bloc)\n",
-    "                bloc = []\n",
-    "            else:\n",
-    "                ligne = ligne.split(' ')\n",
-    "                ligne = [int(element) for element in ligne if element != '']\n",
-    "                bloc.append(ligne)\n",
-    "    return blocs"
+    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\")"
    ]
   },
   {
@@ -408,7 +392,26 @@
     "    f.write(\"\\n\")\n",
     "    for i in range(len(image[0])):\n",
     "        for j in range(len(image[0][0])):\n",
-    "            f.write(image[i][j][2])"
+    "            f.write(image[i][j][2])\n",
+    "    return f"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 12 : Ajouter une option à votre fonction d’écriture pour qu’elle puisse ́ecrire les blocs en appliquant le codage RLE."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def code_RLE(fichier):\n",
+    "    return"
    ]
   },
   {
