je comprend r on va avoir 0

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -393,6 +393,7 @@
     "    for i in range(len(image[0])):\n",
     "        for j in range(len(image[0][0])):\n",
     "            f.write(image[i][j][2])\n",
+    "    f.close()\n",
     "    return f"
    ]
   },
@@ -411,7 +412,22 @@
    "outputs": [],
    "source": [
     "def code_RLE(fichier):\n",
-    "    return"
+    "    r = open(fichier, \"r\")\n",
+    "    e = open(fichier, \"w\")\n",
+    "    ligne = r.readlines()\n",
+    "    compt = 0\n",
+    "    for i in range(4,7):\n",
+    "        for car in ligne[i]:\n",
+    "            if car == '0':\n",
+    "                compt += 1\n",
+    "                ligne[i][car] = \"\"\n",
+    "            if car != '0':\n",
+    "                ligne[i][car] = \"#\"+compt\n",
+    "                compt=0\n",
+    "        e.writelines(ligne)\n",
+    "    r.close()\n",
+    "    e.close()\n",
+    "    return fichier"
    ]
   },
   {
@@ -420,6 +436,47 @@
    "metadata": {},
    "source": [
     "## Décompression"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 13 :  ́Ecrire une fonction de décompression qui prend une liste de blocs pour chaque canal Y,Cb,Cr contenant les coefficients de la DCT et calcule une matrice représentant l’image en RGB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decompress(liste_bloc):\n",
+    "    block_size = 8\n",
+    "    image_width = len(liste_bloc[0]) * block_size\n",
+    "    image_height = len(liste_bloc) * block_size\n",
+    "    image = np.zeros((image_height, image_width, 3), dtype=np.uint8)\n",
+    "\n",
+    "    for i, block_row in enumerate(liste_bloc):\n",
+    "        for j, block in enumerate(block_row):\n",
+    "            block = np.array(block)\n",
+    "            block = block.reshape((block_size, block_size, 3))\n",
+    "\n",
+    "            start_row = i * block_size\n",
+    "            start_col = j * block_size\n",
+    "\n",
+    "            image[start_row:start_row+block_size, start_col:start_col+block_size, :] = block\n",
+    "\n",
+    "    return image"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 14 :  ́Ecrire une fonction qui lit un fichier SJPG et qui créé les listes de blocs décrites par le fichier."
    ]
   },
   {
