--- a/projet.ipynb
+++ b/projet.ipynb
@@ -53,9 +53,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1 : Donner le code qui transforme une image RGB en une image YCbCr. Vous pourrez produire\n",
-    "une matrice pour chaque composante, pour pouvoir plus facilement les manipuler indépendamment. Vous\n",
-    "pouvez stocker les données YCbCr comme des entiers ou des flottants, mais vous expliquerez votre choix."
+    "Question 1 : Donner le code qui transforme une image RGB en une image YCbCr. Vous pourrez produire une matrice pour chaque composante, pour pouvoir plus facilement les manipuler indépendamment. Vous pouvez stocker les données YCbCr comme des entiers ou des flottants, mais vous expliquerez votre choix.\n",
+    "\n",
+    "Réponse: \n",
+    "\n",
+    "Nous avons choisi de stocker les donées YCnCr comme des flottants car lors de la conversion de l'image RGB en YCbCr, on utilise des coefficients très précis. Or les conversions répétées entre les différents modèles de couleur pourrait entraîner une dégradation progressive de l'image.En stockant les données YCbCr en flottants, on peut éviter la perte de précision puisque le nombres flottants offrent une représentation plus précise des valeurs qui est nécessaire au vu de la précision des coefficients utilisés."
    ]
   },
   {
