--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,18 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.398968Z",
-     "start_time": "2023-05-14T15:32:24.309466Z"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import PIL\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import scipy as sp\n",
+    "import os\n",
     "from math import log10, sqrt\n",
     "\n",
     "def load(filename):\n",
@@ -65,13 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.413514Z",
-     "start_time": "2023-05-14T15:32:24.316544Z"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def RGB_en_YCbCR(image):\n",
@@ -101,13 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.413830Z",
-     "start_time": "2023-05-14T15:32:24.328976Z"
-    }
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def YCbCR_en_RGB(image):\n",
@@ -134,13 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.415389Z",
-     "start_time": "2023-05-14T15:32:24.344549Z"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -158,13 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.415663Z",
-     "start_time": "2023-05-14T15:32:24.357147Z"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def unpadding(padded_image, image_origine):\n",
@@ -200,13 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.415772Z",
-     "start_time": "2023-05-14T15:32:24.367963Z"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sous_echantillonnage(matrice):\n",
@@ -234,13 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.415838Z",
-     "start_time": "2023-05-14T15:32:24.377302Z"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -273,13 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.415986Z",
-     "start_time": "2023-05-14T15:32:24.383811Z"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def decoupe_bloc(matrice):\n",
@@ -316,13 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.416510Z",
-     "start_time": "2023-05-14T15:32:24.390985Z"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def applique_trans(liste_bloc):\n",
@@ -342,13 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.416575Z",
-     "start_time": "2023-05-14T15:32:24.399810Z"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def applique_seuil(liste_bloc, seuil):\n",
@@ -371,21 +323,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.416625Z",
-     "start_time": "2023-05-14T15:32:24.406292Z"
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def trois_modes(image, seuil):\n",
-    "    #Image = (image[:,:,:4] * [0.2989, 0.5870, 0.1140]).sum(axis=3)\n",
     "    mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(image))))\n",
     "    mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(image)))), seuil)\n",
     "    mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(image))))), seuil)\n",
-    "    return mode_0, mode_1, mode_2, Image"
+    "    return mode_0, mode_1, mode_2"
    ]
   },
   {
@@ -406,18 +352,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.472924Z",
-     "start_time": "2023-05-14T15:32:24.414133Z"
+     "end_time": "2023-05-08T14:44:30.145282Z",
+     "start_time": "2023-05-08T14:44:30.139328Z"
     }
    },
    "outputs": [],
    "source": [
     "def ecrire_fichier(image, mode):\n",
     "    f = open(\"fichier.txt\", \"w\")\n",
-    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\")"
+    "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\\n\")"
    ]
   },
   {
@@ -430,30 +376,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.473208Z",
-     "start_time": "2023-05-14T15:32:24.419229Z"
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "620 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='fichier.txt' mode='w' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "def ecrire_bloc(image):\n",
     "    f = open(\"fichier.txt\", \"w\")\n",
-    "    for i in range(len(image[0])-1):\n",
-    "        for j in range(len(image[0][0])):\n",
+    "    for i in range(image.shape[0]):\n",
+    "        for j in range(image.shape[1]):\n",
     "            f.write(str(image[i][j][0]))\n",
     "    f.write(\"\\n\")\n",
-    "    for i in range(len(image[0])-1):\n",
-    "        for j in range(len(image[0][0])):\n",
+    "    for i in range(image.shape[0]):\n",
+    "        for j in range(image.shape[1]):\n",
     "            f.write(str(image[i][j][1]))\n",
     "    f.write(\"\\n\")\n",
-    "    for i in range(len(image[0])-1):\n",
-    "        for j in range(len(image[0][0])):\n",
+    "    for i in range(image.shape[0]):\n",
+    "        for j in range(image.shape[1]):\n",
     "            f.write(str(image[i][j][2]))\n",
     "    f.close()\n",
-    "    return f"
+    "    return f\n",
+    "\n",
+    "test = load(\"test.png\")\n",
+    "ecrire_bloc(test)"
    ]
   },
   {
@@ -466,13 +428,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.474356Z",
-     "start_time": "2023-05-14T15:32:24.445463Z"
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def code_RLE(fichier):\n",
@@ -512,13 +469,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.474895Z",
-     "start_time": "2023-05-14T15:32:24.456069Z"
-    }
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def decompress(liste_bloc):\n",
@@ -550,36 +502,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.474971Z",
-     "start_time": "2023-05-14T15:32:24.463406Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def lire_fichier(fichier):\n",
-    "    f = open(fichier, \"r\")\n",
-    "    ligne = f.readlines()\n",
-    "    image = np.zeros((int(ligne[1][0]), int(ligne[1][2]), 3), dtype=np.uint8)\n",
-    "    for i in range(4,7):\n",
-    "        for j in range(len(ligne[i])):\n",
-    "            image[i-4][j][0] = ligne[i][j]\n",
-    "    for i in range(8,11):\n",
-    "        for j in range(len(ligne[i])):\n",
-    "            image[i-8][j][1] = ligne[i][j]\n",
-    "    for i in range(12,15):\n",
-    "        for j in range(len(ligne[i])):\n",
-    "            image[i-12][j][2] = ligne[i][j]\n",
-    "    f.close()\n",
-    "    return image\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -592,24 +517,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-14T15:32:24.548271Z",
-     "start_time": "2023-05-14T15:32:24.470799Z"
-    }
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 472 is out of bounds for axis 0 with size 472",
+     "ename": "ValueError",
+     "evalue": "Too many dimensions: 4 > 3.",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [233], line 16\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m#testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m#Image.fromarray(test,'RGB').show()\u001B[39;00m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;66;03m#Image.fromarray(testYCbCr,'RGB').show()\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m# Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\u001B[39;00m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m#print(psnr(test, YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test))))))\u001B[39;00m\n\u001B[1;32m     15\u001B[0m ecrire_fichier(test, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmode 0\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 16\u001B[0m \u001B[43mecrire_bloc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtest\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;66;03m#solve IndexError: index 472 is out of bounds for axis 0 with size 472\u001B[39;00m\n\u001B[1;32m     19\u001B[0m code_RLE(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "Cell \u001B[0;32mIn [229], line 5\u001B[0m, in \u001B[0;36mecrire_bloc\u001B[0;34m(image)\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(image[\u001B[38;5;241m0\u001B[39m])\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(image[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[0;32m----> 5\u001B[0m         f\u001B[38;5;241m.\u001B[39mwrite(\u001B[38;5;28mstr\u001B[39m(\u001B[43mimage\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m[j][\u001B[38;5;241m0\u001B[39m]))\n\u001B[1;32m      6\u001B[0m f\u001B[38;5;241m.\u001B[39mwrite(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(image[\u001B[38;5;241m0\u001B[39m])\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m):\n",
-      "\u001B[0;31mIndexError\u001B[0m: index 472 is out of bounds for axis 0 with size 472"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\arias\\OneDrive\\Bureau\\Projet IN202\\Projet-IN202\\projet.ipynb Cellule 37\u001b[0m in \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mode_1 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mode_2 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),\u001b[39m10\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m Image\u001b[39m.\u001b[39;49mfromarray(mode_0,\u001b[39m'\u001b[39;49m\u001b[39mRGB\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mshow()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X51sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m Image\u001b[39m.\u001b[39mfromarray(mode_1,\u001b[39m'\u001b[39m\u001b[39mRGB\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mshow()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\PIL\\Image.py:3103\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   3101\u001b[0m \u001b[39mif\u001b[39;00m ndim \u001b[39m>\u001b[39m ndmax:\n\u001b[0;32m   3102\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToo many dimensions: \u001b[39m\u001b[39m{\u001b[39;00mndim\u001b[39m}\u001b[39;00m\u001b[39m > \u001b[39m\u001b[39m{\u001b[39;00mndmax\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 3103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m   3105\u001b[0m size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m ndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m shape[\u001b[39m1\u001b[39m], shape[\u001b[39m0\u001b[39m]\n\u001b[0;32m   3106\u001b[0m \u001b[39mif\u001b[39;00m strides \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: Too many dimensions: 4 > 3."
      ]
     }
    ],
@@ -622,18 +542,11 @@
     "\n",
     "#padded_image = padding(testYCbCr)\n",
     "\n",
-    "# Image.fromarray(padded_image,'RGB').show()\n",
-    "# Image.fromarray(unpadding(padded_image, test),'RGB').show()\n",
+    "#Image.fromarray(padded_image,'RGB').show()\n",
+    "#Image.fromarray(unpadding(padded_image, test),'RGB').show()\n",
     "\n",
-    "# Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\n",
+    "#Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\n",
     "#print(psnr(test, YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test))))))\n",
-    "\n",
-    "ecrire_fichier(test, \"mode 0\")\n",
-    "ecrire_bloc(test)\n",
-    "#solve IndexError: index 472 is out of bounds for axis 0 with size 472\n",
-    "\n",
-    "code_RLE(\"fichier.txt\")\n",
-    "lire_fichier(\"fichier.txt\")\n",
     "\n",
     "mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test))))\n",
     "mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
@@ -642,15 +555,6 @@
     "Image.fromarray(mode_0,'RGB').show()\n",
     "Image.fromarray(mode_1,'RGB').show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
   }
  ],
  "metadata": {
